<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_LoadingStation_InOuts" Id="{675a0f29-2949-4371-bd1a-150550b89c80}">
    <Declaration><![CDATA[TYPE ST_LoadingStation_InOuts :
STRUCT
	bBottleDetectedSensor AT %I*:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>